Filled out the rest of the webpage

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello! I'm Will. I am cool and fun.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from the bay area originally, but moved to San Diego county when I was little.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>A few of my hobbies are cooking, music, and gaming.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I'm not sure! I work at a music studio right now, which is pretty great. I think it'd be pretty cool to work as a developer on audio software, or as an audio engineer at a game studio.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Valley Center, "an unincorporated community of San Diego County."</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I've been interested in computers for a long time and thought it would be a valuable skill to have what with our ever increasing reliance on technology and such. </p>
     </section>
 
     <footer id="footer">
